# my-rust-webapp

./: README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20260101_create_users.sql  20260323_add_org_structures.sql
backend/src/: auth.rs  db.rs  handlers.rs  main.rs  models.rs  seed.rs
backend/tests/: api_flows.rs
frontend/: Cargo.toml  Dockerfile  index.html
frontend/src/: app.rs  main.rs
