[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
gloo-net = "0.5"
gloo = "0.11"
gloo-storage = "0.3"
serde_json = "1.0"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["EventSource", "MessageEvent", "HtmlInputElement"] }
